# Online-Learning-Platform

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2c72e5e0e8cd_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py  serializers.py
backend/app/api/routes/: auth.py  dashboard.py  me.py  placement.py  teachers.py
backend/app/core/: config.py  security.py
backend/app/data/: placement_questions.json
backend/app/db/: base.py  seed.py
backend/app/models/: __init__.py  associations.py  profile.py  session.py  user.py
backend/app/schemas/: auth.py  dashboard.py  me.py  placement.py  teacher.py
backend/app/services/: email.py  placement.py
backend/tests/: conftest.py  test_auth.py  test_dashboard.py  test_placement.py  test_teachers.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: fonts.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/community/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/materials/: page.tsx
frontend/src/app/messages/: page.tsx
frontend/src/app/placement/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/i18n/: config.ts  locale.ts  request.ts
frontend/src/lib/: api.ts  auth.ts  cn.ts  types.ts
frontend/src/messages/: en.json  fr.json  lb.json
(+23 files in other folders)
